Fix price spacing

--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -19,7 +19,7 @@
 }
 
 .price .price-item {
-  margin: 0 10px 0 10px;
+  margin: 0 10px 0 20px;
 }
 
 .price__regular .price-item--regular {
